# Langchain

./: README.md  readme.txt  requirements.txt
Agent-YahooFinance/: .env.example  bestperformer.py  main.py  percentageCheck.py  readme.md  requirements.txt  stockprice.py
Agent-searchapi/: README.md  main.py  requirements.txt
Agents/1. SimpleAgent/: .env.example  README.md  Toolcall.py  main.py  pyproject.toml
Agents/3.Agentic-RAG-Pipeline/: README.md  main.py  pyproject.toml
CrewAI/: .env.example  README.md  main.ipynb  requirements.txt
DeepSeekR1/: Readme.md
Dynamic-Routing-DBdata/: .env.example  data-ingest.py  main.ipynb  requirements.txt
FilecallbackHandler/: main.py  output.txt  readme.md  requirements.txt
FlashRank-Reranker/: README.md  main.py  requirements.txt
FunctionCalling-groq/: .env.example  main.ipynb  pyproject.toml
LCEL/: .env.example  embedding.ipynb  main.ipynb  readme.md  requirements.txt
LangFuse and FastApi/: .env.example  README.md  main.py  requirements.txt
Langchain-All-In-One/: RAG.ipynb  README.md  basics.ipynb  chain_of_thought_prompting.ipynb  memory.ipynb  requirements.txt  technical.txt  tool_calling.ipynb  zero_one_few_shots_prompts.ipynb
Langchain-Azure/: README.md  app.py  az_cognitive_search.py  blob.py  dockerfile  requirements.txt
MCPServerApp-Initial/: .env.example  README.md  client.py  main.py  mathserver.py  pyproject.toml  weather.py
Multi-Query-RAG/: .env.example  main.ipynb  requirements.txt
Multi-pdf-chat/: htmlTemplates.py  main.py  readme.md  requirements.txt
MultiDataSource-Agents-Tools/: .env.example  agents.ipynb  main.py  readme.md  requirements.txt
Pandas-ai-langchain/: .env.example  README.md  main.py  requirements.txt
Parent-Document-Retreiver/: .env.example  Output.txt  main.py  readme.md  requirements.txt
Postgres-IndexingApi-FastAPI/: insert_data.py  main.py  readme.md  requirements.txt
RAG-HybridSearch-Chromadb/: .env.example  main.py  readme.md  requirements.txt
RAG-HybridSearch-pinecone/: bm25_encoder.json  main.ipynb  readme.md  requirements.txt
RAGApp/: main.py  requirements.txt
Redis-chatHistory/: README.md  main.ipynb  requirements.txt
Retreival-LongContextReorder/: main.ipynb  requirements.txt
Retrieval-QueryExpansion-groq/: .env.example  QueryExpansion_Retrieval.ipynb  Readme.md  pyproject.toml
Routing/: README.md  main.ipynb  (+1 more)
Structured-outputs/: .env.example  demo1.ipynb  pyproject.toml  requirements.txt
(+113 files in other folders)
