[tool.poetry]
name = "retrieval-queryexpansion-groq"
version = "0.1.0"
description = "Use Groq, Chromadb, Langchain"
authors = ["Manimaran"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
groq = "^0.11.0"
chromadb = "^0.5.18"
python-dotenv = "^1.0.1"
pypdf2 = "^3.0.1"
pypdf = "^5.1.0"
sentence-transformers = "^3.3.0"
umap-learn = "^0.5.7"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
