[project]
name = "1-simpleagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=40.11.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-google-community>=3.0.5",
    "langchain-google-genai>=4.2.1",
]
