[project]
name = "agentic-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "pypdf>=6.5.0",
    "sentence-transformers>=5.2.0",
    "transformers>=4.57.3",
]
